Overall style changes, changed certain header locations to be outside of form,list divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,11 @@ header{
 .favorites-list{
     list-style-type: none;
 }
+
+.dinner-instructions{
+    padding-left: 10px;
+}
+
+.instructions{
+    padding-left: 17px;
+}
