--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-.hidden {
-    display: none;
-}
-
-
 header {
     text-align: center;
 }
@@ -11,6 +6,14 @@ ul {
     padding-left: 0;
 }
 
+.tasty {
+    font-family: 'Cantarell', sans-serif;
+}
+
+/* hides menu div on start, then hides start page/displays menu page when button is clicked */
+.hidden {
+    display: none;
+}
 
 .menu-title {
     font-size: 100px;
@@ -45,6 +48,7 @@ ul {
     transition: flex-basis 500ms linear;
 }
 
+/* reformats menu on smaller screens to be one column */
 @media screen and (max-width: 768px) {
 
     .resize {
@@ -60,12 +64,4 @@ ul {
         font-size: 80px;
     }
 
-    /* 
-    header {
-        flex-wrap: wrap;
-    }
-
-    * {
-        font-size: 4vw;
-    } */
 }
